k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traciq
  labels:
    app.kubernetes.io/name: traciq
